@@ -4,6 +4,8 @@
 	- Fix memory leak in do_auth_zone_transfer on success
 	- Merge RPZ support into master. Only QNAME and Response IP triggers are
 	  supported.
+	- Stop working on socket when socket() call returns an error.
+	- Check malloc return values in TLS session ticket code
 
 30 January 2020: Wouter
 	- Fix subnet tests for disabled DSA algorithm by default.
